# NSU_robotics

./: .gitignore  README.md
lab0/ex01/: commands.txt
lab1/ex01/: .bashrc
lab1/ex02/: list_exec_action_tutorials.txt  package_path_ros2topic.txt
lab1/ex03/mikev182/: package.xml  setup.cfg  setup.py
lab1/ex03/mikev182/mikev182/: my_node.py
lab1/ex04/: colcon_build.txt
lab1/ex05/: rosnode_info.txt  rosnode_list.txt
lab1/ex06/: draw_eight.sh
lab1/ex07/: commands.md
lab1/ex08/: rqt_console.csv  three_turtles.launch.py
lab1/ex09/tutorial_interfaces/: CMakeLists.txt  package.xml
lab1/ex10/text_to_cmd_vel_pkg/: package.xml  setup.cfg  setup.py
lab1/ex10/text_to_cmd_vel_pkg/text_to_cmd_vel_pkg/: text_to_cmd_vel.py
lab2/ex01/ex03_01/: CMakeLists.txt  package.xml
lab2/ex01/ex03_01/ex03_01/: client_name.py  service_name.py
lab2/ex02/: commands.md  pose_speed_x1.txt  pose_speed_x2.txt
lab2/ex02/turtle_cmd_vel/: metadata.yaml  turtle_cmd_vel_0.mcap
lab2/ex03/: commands.md  doctor.txt  full_doctor.txt
lab2/ex04/: commands.md
lab2/ex04/move_to_goal/: CMakeLists.txt  package.xml
lab2/ex04/move_to_goal/src/: move_to_goal.cpp
lab2/ex05/: comands.md
lab2/ex05/action_cleaning_robot/: package.xml  setup.py
lab2/ex05/action_cleaning_robot/action_cleaning_robot/: cleaning_task_client.py  cleaning_task_server.py
lab2/ex05/action_cleaning_robot_interface/: CMakeLists.txt  package.xml
lab4/ex01/: commands.md  frames_2025-10-10_11.30.30.gv  last_transform.txt  transform.txt
lab4/ex02/: launch.sh
lab4/ex02/ex0402a/: package.xml  setup.cfg  setup.py
lab4/ex02/ex0402a/config/: carrot.rviz
lab4/ex02/ex0402a/ex0402a/: carrot_tf2_broadcaster.py  turtle2_tf2_broadcaster.py  turtle_tf2_broadcaster.py  turtle_tf2_listener.py
lab4/ex02/ex0402a/launch/: turtle_carrot.launch.py
lab4/ex03/: commands.sh
lab4/ex03/ex0402b/: CMakeLists.txt  package.xml
lab4/ex03/ex0402b/include/ex0402b/: utilities.hpp
lab4/ex03/ex0402b/launch/: ex0402b.launch.py
lab4/ex03/ex0402b/rviz/: multi_target.rviz
lab4/ex03/ex0402b/src/: keyboard_listener.cpp  target_switcher.cpp  turtle2_tf2_broadcaster.cpp  turtle_controller.cpp  turtle_tf2_broadcaster.cpp
lab4/ex04/: commands.sh
lab4/ex04/ex0403/: CMakeLists.txt  package.xml
lab4/ex04/ex0403/launch/: turtle_follower.launch.py
lab4/ex04/ex0403/src/: turtle_follower.cpp
lab5/ex01/: commands.sh
lab5/ex01/ex0501/: CMakeLists.txt  package.xml
lab5/ex01/ex0501/ex01/: robot.urdf
lab5/ex01/ex0501/launch/: robot_display.launch.py
lab5/ex01/ex0501/rviz/: robot.rviz
lab5/ex02/: robot.urdf.xacro  robot_display.launch.py
lab5/ex0503_demo/: package.xml  robot.gazebo.xacro  setup.cfg  setup.py
lab5/ex0503_demo/launch/: robot_display_gazebo.launch.py
lab5/ex0504/: package.xml  robot.rviz  setup.cfg  setup.py
lab5/ex0504/ex0504/: circle_movement.py
lab5/ex0504/launch/: circle_movement.launch.py
lab5/ex0505/: package.xml  robot.gazebo.xacro  robot.rviz  setup.cfg  setup.py
lab5/ex0505/ex0505/: figure_eight_movement.py
lab5/ex0505/launch/: circle_movement.launch.py
lab6/ex0601/: CMakeLists.txt  package.xml
lab6/ex0601/config/: lidar_bridge.yaml
lab6/ex0601/launch/: ex0601.launch.py
lab6/ex0601/src/: lidar_stop.cpp
lab6/ex0601/urdf/: ex0601.gazebo.xacro  ex0601.urdf.xacro
lab6/ex0602/: CMakeLists.txt  package.xml
lab6/ex0602/config/: camera_bridge.yaml
lab6/ex0602/launch/: ex0602.launch.py
lab6/ex0602/src/: camera_stop.cpp
lab6/ex0602/urdf/: ex0602.gazebo.xacro  ex0602.urdf.xacro
