cmake_minimum_required(VERSION 3.8)
project(ex0602)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)

add_executable(camera_stop src/camera_stop.cpp)
ament_target_dependencies(camera_stop rclcpp geometry_msgs sensor_msgs)

install(TARGETS camera_stop
  DESTINATION lib/${PROJECT_NAME})

install(DIRECTORY
  config
  launch
  urdf
  DESTINATION share/${PROJECT_NAME}
)

ament_package()