<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tutorial_interfaces</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="michailvays@gmail.com">bugwriter</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- generate code for the custom interfaces. -->
  <build_depend>rosidl_default_generators</build_depend>
  <!-- ensures the generated interfaces are available at runtime. -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!-- tag is required for ROS 2 interface packages. -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
